@@ -4,41 +4,55 @@ import static com.dlsc.workbenchfx.model.WorkbenchDialog.Type;
 
 import com.dlsc.workbenchfx.model.WorkbenchDialog;
 import com.dlsc.workbenchfx.model.WorkbenchModule;
+import com.dlsc.workbenchfx.model.WorkbenchOverlay;
+import com.dlsc.workbenchfx.view.WorkbenchPresenter;
 import com.dlsc.workbenchfx.view.controls.GlassPane;
 import com.dlsc.workbenchfx.view.controls.NavigationDrawer;
+import com.dlsc.workbenchfx.view.controls.ToolbarItem;
 import com.dlsc.workbenchfx.view.controls.dialog.DialogControl;
 import com.dlsc.workbenchfx.view.controls.module.Page;
 import com.dlsc.workbenchfx.view.controls.module.Tab;
 import com.dlsc.workbenchfx.view.controls.module.Tile;
-import java.util.LinkedHashSet;
-import java.util.List;
+import com.google.common.collect.Range;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.CompletableFuture;
+import java.util.function.Consumer;
+import javafx.animation.TranslateTransition;
 import javafx.application.Platform;
 import javafx.beans.binding.Bindings;
+import javafx.beans.binding.DoubleBinding;
+import javafx.beans.binding.DoubleExpression;
 import javafx.beans.property.IntegerProperty;
 import javafx.beans.property.ListProperty;
 import javafx.beans.property.ObjectProperty;
-import javafx.beans.property.ReadOnlyBooleanProperty;
-import javafx.beans.property.ReadOnlyBooleanWrapper;
+import javafx.beans.property.ReadOnlyDoubleProperty;
 import javafx.beans.property.ReadOnlyIntegerProperty;
 import javafx.beans.property.ReadOnlyObjectProperty;
-import javafx.beans.property.ReadOnlyObjectWrapper;
 import javafx.beans.property.SimpleIntegerProperty;
 import javafx.beans.property.SimpleListProperty;
 import javafx.beans.property.SimpleObjectProperty;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.collections.ObservableMap;
-import javafx.collections.ObservableSet;
+import javafx.event.Event;
+import javafx.event.EventHandler;
+import javafx.geometry.Pos;
+import javafx.geometry.Side;
 import javafx.scene.Node;
 import javafx.scene.Scene;
 import javafx.scene.control.ButtonType;
 import javafx.scene.control.Control;
 import javafx.scene.control.MenuItem;
 import javafx.scene.control.Skin;
+import javafx.scene.layout.Region;
+import javafx.scene.layout.StackPane;
 import javafx.stage.Stage;
+import javafx.stage.WindowEvent;
 import javafx.util.Callback;
+import javafx.util.Duration;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
@@ -48,33 +62,57 @@ import org.apache.logging.log4j.Logger;
  * @author François Martin
  * @author Marco Sanfratello
  */
-public class Workbench extends Control {
+public final class Workbench extends Control {
 
   private static final Logger LOGGER =
       LogManager.getLogger(Workbench.class.getName());
 
-  public static final String STYLE_CLASS_ACTIVE_TAB = "active-tab";
-  public static final String STYLE_CLASS_ACTIVE_HOME = "active-add-button";
+  // Constants
+  private static final int MAX_PERCENT = 100;
+
+  /**
+   * Duration of animations according to material design guidelines.
+   * @see <a href="https://material.io/design/motion/speed.html#duration">
+   * Speed - Material Design</a>
+   */
+  private static final int ANIMATION_DURATION_DRAWER_OPEN = 250;
+  private static final int ANIMATION_DURATION_DRAWER_CLOSE = 200;
+
+  // Default values
+  private static final Callback<Workbench, Tab> DEFAULT_TAB_FACTORY = Tab::new;
+  private static final Callback<Workbench, Tile> DEFAULT_TILE_FACTORY = Tile::new;
+  private static final Callback<Workbench, Page> DEFAULT_PAGE_FACTORY = Page::new;
+  private static final int DEFAULT_MODULES_PER_PAGE = 6;
+  private static final NavigationDrawer DEFAULT_NAVIGATION_DRAWER = new NavigationDrawer();
 
   // Custom Controls
-  private ObjectProperty<NavigationDrawer> navigationDrawer = new SimpleObjectProperty<>();
-  private ObjectProperty<DialogControl> dialogControl = new SimpleObjectProperty<>();
+  private final ObjectProperty<NavigationDrawer> navigationDrawer =
+      new SimpleObjectProperty<>(this, "navigationDrawer", DEFAULT_NAVIGATION_DRAWER);
 
   // Lists
-  private final ObservableSet<Node> toolbarControlsRight =
-      FXCollections.observableSet(new LinkedHashSet<>());
-  private final ObservableSet<Node> toolbarControlsLeft =
-      FXCollections.observableSet(new LinkedHashSet<>());
+  private final ObservableList<ToolbarItem> toolbarControlsRight =
+      FXCollections.observableArrayList();
+  private final ObservableList<ToolbarItem> toolbarControlsLeft =
+      FXCollections.observableArrayList();
   private final ObservableList<MenuItem> navigationDrawerItems =
       FXCollections.observableArrayList();
 
   /**
    * Map containing all overlays which have been loaded into the scene graph, with their
-   * corresponding {@link GlassPane}.
+   * corresponding model object {@link WorkbenchOverlay}.
    */
-  private final ObservableMap<Node, GlassPane> overlays = FXCollections.observableHashMap();
-  private final ObservableSet<Node> nonBlockingOverlaysShown = FXCollections.observableSet();
-  private final ObservableSet<Node> blockingOverlaysShown = FXCollections.observableSet();
+  private final ObservableMap<Region, WorkbenchOverlay> overlays =
+      FXCollections.observableHashMap();
+
+  private final ObservableList<Region> nonBlockingOverlaysShown =
+      FXCollections.observableArrayList();
+  private final ObservableList<Region> blockingOverlaysShown =
+      FXCollections.observableArrayList();
+
+  private final ObjectProperty<Region> drawerShown =
+      new SimpleObjectProperty<>(this, "drawerShown");
+  private final ObjectProperty<Side> drawerSideShown =
+      new SimpleObjectProperty<>(this, "drawerSideShown");
 
   // Modules
   /**
@@ -92,12 +130,24 @@ public class Workbench extends Control {
       FXCollections.observableArrayList());
 
   /**
+   * Will close the module without calling {@link WorkbenchModule#destroy()} if the corresponding
+   * {@link CompletableFuture} is completed. If the stage was closed and {@code false} was returned
+   * on {@link WorkbenchModule#destroy()}, it will also trigger {@link
+   * Stage#setOnCloseRequest(EventHandler)}. Is <b>always</b> completed with {@code true}. This way,
+   * there is no need to differentiate whether it was completed with {@code true} or {@code false}.
+   */
+  private final Map<WorkbenchModule, CompletableFuture<Boolean>> moduleCloseableMap =
+      new HashMap<>();
+
+  /**
    * Currently active module. Active module is the module, which is currently being displayed in the
    * view. When the home screen is being displayed, {@code activeModule} and {@code
    * activeModuleView} are null.
    */
-  private final ObjectProperty<WorkbenchModule> activeModule = new SimpleObjectProperty<>();
-  private final ObjectProperty<Node> activeModuleView = new SimpleObjectProperty<>();
+  private final ObjectProperty<WorkbenchModule> activeModule =
+      new SimpleObjectProperty<>(this, "activeModule");
+  private final ObjectProperty<Node> activeModuleView =
+      new SimpleObjectProperty<>(this, "activeModuleView");
 
   // Factories
   /**
@@ -105,38 +155,18 @@ public class Workbench extends Control {
    * require a module whose attributes are used to create the Nodes.
    */
   private final ObjectProperty<Callback<Workbench, Tab>> tabFactory =
-      new SimpleObjectProperty<>(this, "tabFactory");
+      new SimpleObjectProperty<>(this, "tabFactory", DEFAULT_TAB_FACTORY);
   private final ObjectProperty<Callback<Workbench, Tile>> tileFactory =
-      new SimpleObjectProperty<>(this, "tileFactory");
+      new SimpleObjectProperty<>(this, "tileFactory", DEFAULT_TILE_FACTORY);
   private final ObjectProperty<Callback<Workbench, Page>> pageFactory =
-      new SimpleObjectProperty<>(this, "pageFactory");
+      new SimpleObjectProperty<>(this, "pageFactory", DEFAULT_PAGE_FACTORY);
 
   // Properties
-  private final IntegerProperty modulesPerPage = new SimpleIntegerProperty();
-  private final IntegerProperty amountOfPages = new SimpleIntegerProperty();
-  private final ReadOnlyObjectWrapper<WorkbenchDialog> dialog =
-      new ReadOnlyObjectWrapper<>(this, "dialog");
-  private final ReadOnlyBooleanWrapper dialogShown =
-      new ReadOnlyBooleanWrapper(this, "dialogShown", false);
+  private final IntegerProperty modulesPerPage =
+      new SimpleIntegerProperty(this, "modulesPerPage", DEFAULT_MODULES_PER_PAGE);
+  private final IntegerProperty amountOfPages = new SimpleIntegerProperty(this, "amountOfPages");
 
-  Workbench(WorkbenchBuilder builder) {
-    setModulesPerPage(builder.modulesPerPage);
-    initBindings();
-    initFactories(builder);
-    initToolbarControls(builder);
-    initNavigationDrawer(builder);
-    initDialog(builder);
-    initModules(builder);
-
-    setupCleanup();
-  }
-
-  private void initFactories(WorkbenchBuilder builder) {
-    tabFactory.set(builder.tabFactory);
-    tileFactory.set(builder.tileFactory);
-    pageFactory.set(builder.pageFactory);
-  }
-
+  // Builder
   /**
    * Creates a builder for {@link Workbench}.
    *
@@ -147,28 +177,195 @@ public class Workbench extends Control {
     return new WorkbenchBuilder(modules);
   }
 
+  public static final class WorkbenchBuilder {
+    private static final Logger LOGGER = LogManager.getLogger(WorkbenchBuilder.class.getName());
+
+    // Required parameters
+    private WorkbenchModule[] modules;
+
+    // Optional parameters - initialized to default values
+    private int modulesPerPage = DEFAULT_MODULES_PER_PAGE;
+
+    private Callback<Workbench, Tab> tabFactory = DEFAULT_TAB_FACTORY;
+
+    private Callback<Workbench, Tile> tileFactory = DEFAULT_TILE_FACTORY;
+
+    private Callback<Workbench, Page> pageFactory = DEFAULT_PAGE_FACTORY;
+
+    private ToolbarItem[] toolbarControlsRight;
+    private ToolbarItem[] toolbarControlsLeft;
+
+    private NavigationDrawer navigationDrawer = DEFAULT_NAVIGATION_DRAWER;
+
+    private MenuItem[] navigationDrawerItems;
+
+    private WorkbenchBuilder(WorkbenchModule... modules) {
+      this.modules = modules;
+    }
+
+    /**
+     * Defines how many modules should be shown per page on the home screen.
+     *
+     * @param modulesPerPage amount of modules to be shown per page
+     * @return builder for chaining
+     */
+    public final WorkbenchBuilder modulesPerPage(int modulesPerPage) {
+      this.modulesPerPage = modulesPerPage;
+      return this;
+    }
+
+    /**
+     * Defines how {@link Tab} should be created to be used as tabs in the view.
+     *
+     * @param tabFactory to be used to create the {@link Tab}
+     * @return builder for chaining
+     * @implNote Use this to replace the control which is used for the tab with your own
+     *           implementation.
+     */
+    public final WorkbenchBuilder tabFactory(Callback<Workbench, Tab> tabFactory) {
+      this.tabFactory = tabFactory;
+      return this;
+    }
+
+    /**
+     * Defines how {@link Tab} should be created to be used as tiles in the home screen.
+     *
+     * @param tileFactory to be used to create the {@link Tile}
+     * @return builder for chaining
+     * @implNote Use this to replace the control which is used for the tiles with your own
+     *           implementation.
+     */
+    public final WorkbenchBuilder tileFactory(Callback<Workbench, Tile> tileFactory) {
+      this.tileFactory = tileFactory;
+      return this;
+    }
+
+    /**
+     * Defines how a {@link Page} with tiles of {@link WorkbenchModule}s should be created.
+     *
+     * @param pageFactory to be used to create the {@link Page} for the tiles
+     * @return builder for chaining
+     * @implNote Use this to replace the page which is used in the home screen to display tiles
+     *           of the modules with your own implementation.
+     */
+    public final WorkbenchBuilder pageFactory(Callback<Workbench, Page> pageFactory) {
+      this.pageFactory = pageFactory;
+      return this;
+    }
+
+    /**
+     * Defines which navigation drawer should be shown.
+     *
+     * @param navigationDrawer to be shown as the navigation drawer
+     * @return builder for chaining
+     * @implNote Use this to replace the navigation drawer, which is displayed when pressing the
+     *           menu icon, with your own implementation. To access the {@link MenuItem}s, use
+     *           {@link Workbench#getNavigationDrawerItems()}.
+     */
+    public final WorkbenchBuilder navigationDrawer(NavigationDrawer navigationDrawer) {
+      this.navigationDrawer = navigationDrawer;
+      return this;
+    }
+
+    /**
+     * Defines the {@link MenuItem}s, which will be rendered using the respective {@code
+     * navigationDrawerFactory}.
+     *
+     * @param navigationDrawerItems the {@link MenuItem}s to display or null, if there should be no
+     *                              menu
+     * @return builder for chaining
+     * @implNote the menu button will be hidden, if null is passed to {@code navigationDrawerItems}
+     */
+    public final WorkbenchBuilder navigationDrawerItems(MenuItem... navigationDrawerItems) {
+      this.navigationDrawerItems = navigationDrawerItems;
+      return this;
+    }
+
+    /**
+     * Defines the Controls which are placed on top-left of the Toolbar.
+     *
+     * @param toolbarControlsLeft the {@link ToolbarItem}s which will be added to the Toolbar
+     * @return the updated {@link WorkbenchBuilder}
+     */
+    public final WorkbenchBuilder toolbarLeft(ToolbarItem... toolbarControlsLeft) {
+      this.toolbarControlsLeft = toolbarControlsLeft;
+      return this;
+    }
+
+    /**
+     * Defines the Controls which are placed on top-right of the Toolbar.
+     *
+     * @param toolbarControlsRight the {@link ToolbarItem}s which will be added to the Toolbar
+     * @return the updated {@link WorkbenchBuilder}
+     */
+    public final WorkbenchBuilder toolbarRight(ToolbarItem... toolbarControlsRight) {
+      this.toolbarControlsRight = toolbarControlsRight;
+      return this;
+    }
+
+    /**
+     * Builds and fully initializes a {@link Workbench} object.
+     *
+     * @return the {@link Workbench} object
+     */
+    public final Workbench build() {
+      return new Workbench(this);
+    }
+  }
+
+  /**
+   * Default constructor for use with Scene Builder.
+   * For use without FXML, use {@link Workbench#builder(WorkbenchModule...)} instead.
+   */
+  public Workbench() {
+    initBindings();
+    initListeners();
+    initNavigationDrawer(getNavigationDrawer());
+    setupCleanup();
+    getStylesheets().add(Workbench.class.getResource("css/context-menu.css").toExternalForm());
+    getStyleClass().add("workbench");
+  }
+
+  /**
+   * Constructor for WorkbenchFX by using the {@link WorkbenchBuilder}.
+   *
+   * @param builder to use for the setup
+   */
+  private Workbench(WorkbenchBuilder builder) {
+    this();
+    setModulesPerPage(builder.modulesPerPage);
+    initFactories(builder);
+    initToolbarControls(builder);
+    initNavigationDrawer(builder);
+    initModules(builder);
+  }
+
+  private void initFactories(WorkbenchBuilder builder) {
+    tabFactory.set(builder.tabFactory);
+    tileFactory.set(builder.tileFactory);
+    pageFactory.set(builder.pageFactory);
+  }
+
   private void initBindings() {
     amountOfPages.bind(
         Bindings.createIntegerBinding(
             this::calculateAmountOfPages, modulesPerPageProperty(), getModules()
         )
     );
-
-    dialogShown.bind(dialogProperty().isNotNull());
   }
 
   @Override
-  protected Skin<?> createDefaultSkin() {
+  protected final Skin<?> createDefaultSkin() {
     return new WorkbenchSkin(this);
   }
 
   private void initToolbarControls(WorkbenchBuilder builder) {
     if (builder.toolbarControlsLeft != null) {
-      toolbarControlsLeft.addAll(List.of(builder.toolbarControlsLeft));
+      toolbarControlsLeft.addAll(Arrays.asList(builder.toolbarControlsLeft));
     }
 
     if (builder.toolbarControlsRight != null) {
-      toolbarControlsRight.addAll(List.of(builder.toolbarControlsRight));
+      toolbarControlsRight.addAll(Arrays.asList(builder.toolbarControlsRight));
     }
   }
 
@@ -176,43 +373,21 @@ public class Workbench extends Control {
     if (builder.navigationDrawerItems != null) {
       navigationDrawerItems.addAll(builder.navigationDrawerItems);
     }
-    // when control of navigation drawer changes, pass in the workbench object
-    navigationDrawerProperty().addListener((observable, oldControl, newControl) -> {
-      if (!Objects.isNull(newControl)) {
-        newControl.setWorkbench(this);
-      }
-    });
-    setNavigationDrawer(builder.navigationDrawer);
+    initNavigationDrawer(builder.navigationDrawer);
   }
 
-  private void initDialog(WorkbenchBuilder builder) {
-    // when control of navigation drawer changes, pass in the workbench object
-    dialogControlProperty().addListener((observable, oldControl, newControl) -> {
-      if (!Objects.isNull(newControl)) {
-        newControl.setWorkbench(this);
-      }
-    });
-    setDialogControl(builder.dialogControl);
-
-    // shows or hides the dialog every time the dialogProperty() changes
-    dialogProperty().addListener((observable, oldDialog, newDialog) -> {
-      if (newDialog != null) {
-        showOverlay(getDialogControl(), newDialog.isBlocking());
-      } else {
-        hideOverlay(getDialogControl());
-        if (!oldDialog.getResult().isDone()) {
-          LOGGER.debug("Dialog was closed by clicking on the GlassPane (cancel)");
-          oldDialog.getResult().complete(ButtonType.CANCEL);
-        }
-      }
-    });
+  private void initNavigationDrawer(NavigationDrawer navigationDrawer) {
+    setNavigationDrawer(navigationDrawer);
+    navigationDrawer.setWorkbench(this);
   }
 
   private void initModules(WorkbenchBuilder builder) {
     WorkbenchModule[] modules = builder.modules;
 
     this.modules.addAll(modules);
+  }
 
+  private void initListeners() {
     // handle changes of the active module
     activeModule.addListener((observable, oldModule, newModule) -> {
       LOGGER.trace("Module Listener - Old Module: " + oldModule);
@@ -238,10 +413,31 @@ public class Workbench extends Control {
           // module has not been loaded yet
           LOGGER.trace("Active Module Listener - Initializing module - " + newModule);
           newModule.init(this);
+          resetModuleCloseable(newModule); // initialize closing on call to #close()
           openModules.add(newModule);
         }
         LOGGER.trace("Active Module Listener - Activating module - " + newModule);
         activeModuleView.setValue(newModule.activate());
+      }
+    });
+
+    // handle drawer changes
+    drawerShown.addListener((observable, oldDrawer, newDrawer) -> {
+      if (!Objects.isNull(oldDrawer)) {
+        hideOverlay(oldDrawer);
+      }
+      if (!Objects.isNull(newDrawer)) {
+        showOverlay(newDrawer, false, drawerSideShown.get());
+      }
+    });
+
+
+    // when control of navigation drawer changes, pass in the workbench object
+    navigationDrawerProperty().addListener((observable, oldControl, newControl) -> {
+      LOGGER.trace("NavigationDrawer has been set");
+      if (!Objects.isNull(newControl)) {
+        LOGGER.trace("NavigationDrawer - Setting Workbench");
+        newControl.setWorkbench(this);
       }
     });
   }
@@ -259,22 +455,31 @@ public class Workbench extends Control {
       Stage stage = (Stage) getScene().getWindow();
       // when application is closed, destroy all modules
       stage.setOnCloseRequest(event -> {
-        LOGGER.trace("Stage was requested to be closed - Close all open modules first");
+        LOGGER.trace("Stage was requested to be closed");
+        event.consume(); // we need to perform some cleanup actions first
 
-        // must be implemented by using "while" since the list of getOpenModules changes when
-        // modules are closed!
-        while (getOpenModules().size() > 0) {
-          WorkbenchModule moduleToClose = getOpenModules().get(0);
-          LOGGER.trace("Cleanup - Close module: " + moduleToClose);
-          if (!closeModule(moduleToClose)) {
-            LOGGER.debug(
-                String.format("Module %s prevented closing of the application", moduleToClose)
-            );
-            // module can't be destroyed yet - prevent closing of the application
-            event.consume();
-            // stop the closing of modules to proceed
-            break;
+        // close all open modules until one returns false
+        while (!getOpenModules().isEmpty()) {
+          WorkbenchModule openModule = getOpenModules().get(0);
+          if (!closeModule(openModule)) {
+            LOGGER.trace("Module " + openModule + " could not be closed yet");
+
+            // once module is ready to be closed, start stage closing process over again
+            getModuleCloseable(openModule).thenRun(() -> {
+              LOGGER.trace("moduleCloseable - Stage - thenRun triggered: " + openModule);
+              LOGGER.trace(openModule + " restarted stage closing process");
+              // re-start closing process, in case other modules are blocking the closing process
+              stage.fireEvent(new WindowEvent(stage, WindowEvent.WINDOW_CLOSE_REQUEST));
+            });
+            LOGGER.trace("moduleCloseable - Stage - thenRun set: " + openModule);
+
+            break; // interrupt closing until the interrupting module has been safely closed
           }
+        }
+
+        if (getOpenModules().isEmpty()) {
+          LOGGER.trace("All modules could be closed successfully, closing stage");
+          stage.close();
         }
       });
     });
@@ -286,7 +491,7 @@ public class Workbench extends Control {
    *
    * @param module the module to be opened or null to go to the home view
    */
-  public void openModule(WorkbenchModule module) {
+  public final void openModule(WorkbenchModule module) {
     if (!modules.contains(module)) {
       throw new IllegalArgumentException(
           "Module has not been loaded yet");
@@ -298,7 +503,7 @@ public class Workbench extends Control {
   /**
    * Goes back to the home screen where the user can choose between modules.
    */
-  public void openHomeScreen() {
+  public final void openHomeScreen() {
     activeModule.setValue(null);
   }
 
@@ -308,7 +513,7 @@ public class Workbench extends Control {
    * @param module to be closed
    * @return true if closing was successful
    */
-  public boolean closeModule(WorkbenchModule module) {
+  public final boolean closeModule(WorkbenchModule module) {
     LOGGER.trace("closeModule - " + module);
     LOGGER.trace("closeModule - List of open modules: " + openModules);
     Objects.requireNonNull(module);
@@ -334,14 +539,22 @@ public class Workbench extends Control {
       newActive = openModules.get(i - 1);
       LOGGER.trace("closeModule - Next active: Previous Module - " + newActive);
     }
-    // attempt to destroy module
-    if (!module.destroy()) {
-      // module should or could not be destroyed
-      LOGGER.trace("closeModule - Destroy: Fail - " + module);
-      return false;
-    } else {
+    // if the currently active module is the one that is being closed, deactivate first
+    if (oldActive == module) {
+      LOGGER.trace("closeModule - " + module + " was deactivated");
+      module.deactivate();
+    }
+    /*
+      If module has previously been closed and can now safely be closed, calling destroy() is not
+      necessary anymore, simply remove the module
+      If this module is being closed the first time or cannot be safely closed yet, attempt to
+      destroy module.
+      Note: destroy() will not be called if moduleCloseable was completed with true!
+     */
+    if (getModuleCloseable(module).getNow(false) || module.destroy()) {
       LOGGER.trace("closeModule - Destroy: Success - " + module);
       boolean removal = openModules.remove(module);
+      moduleCloseableMap.remove(module);
       LOGGER.trace("closeModule - Destroy, Removal successful: " + removal + " - " + module);
       if (oldActive != newActive) {
         // only log if the active module has been changed
@@ -349,6 +562,26 @@ public class Workbench extends Control {
       }
       activeModule.setValue(newActive);
       return removal;
+    } else {
+      /*
+        If moduleCloseable wasn't completed yet but closeModule was called, there are two cases:
+        1. The stage is calling closeModule() => since thenRun will be set on moduleCloseable after
+           closeModule() returns "false", we need to reset moduleCloseable so that repeating stage
+           closes without completing moduleClosable won't lead to multiple thenRun actions being
+           layered with each stage close.
+        2. The tab is being closed, calling closeModule() => if there was a stage close beforehand
+           (and thus a thenRun from the stage closing process is still active) we need to
+           reset moduleCloseable so that the stage closing process will not be triggered again.
+       */
+      resetModuleCloseable(module);
+      // module should or could not be destroyed
+      LOGGER.trace("closeModule - Destroy: Fail - " + module);
+      // if the module that has failed to be destroyed is already open, activate it again
+      if (getActiveModule() == module) {
+        module.activate();
+      }
+      openModule(module); // set focus to new module
+      return false;
     }
   }
 
@@ -356,8 +589,8 @@ public class Workbench extends Control {
    * Calculates the amount of pages of modules (rendered as tiles).
    *
    * @return amount of pages
-   * @implNote Each page is filled up until there are as many tiles as {@code modulesPerPage}. This
-   *           is repeated until all modules are rendered as tiles.
+   * @implNote Each page is filled up until there are as many tiles as {@code modulesPerPage}.
+   *           This is repeated until all modules are rendered as tiles.
    */
   private int calculateAmountOfPages() {
     int amountOfModules = getModules().size();
@@ -372,215 +605,26 @@ public class Workbench extends Control {
   }
 
   /**
-   * Returns an unmodifiableObservableList of the currently open modules.
+   * Completes the {@code moduleCloseable} of the {@code module}.
+   * Results in the module getting closed without calling {@link WorkbenchModule#destroy()}
+   * beforehand. If the stage was closed and calling {@link WorkbenchModule#destroy()} returned
+   * {@code false}, calling this method will also cause the stage closing process to get continued.
    *
-   * @return the list of open modules
+   * @param module whose {@code moduleCloseable} should be completed
    */
-  public ObservableList<WorkbenchModule> getOpenModules() {
-    return FXCollections.unmodifiableObservableList(openModules);
+  public final void completeModuleCloseable(WorkbenchModule module) {
+    getModuleCloseable(module).complete(true);
   }
 
-  public ListProperty<WorkbenchModule> openModulesProperty() {
-    return openModules;
-  }
-
-  /**
-   * Returns a list of the currently loaded modules.
-   *
-   * @return the list of all loaded modules
-   * @implNote Use this method to add or remove modules at runtime.
-   */
-  public ObservableList<WorkbenchModule> getModules() {
-    return modules.get();
-  }
-
-  public ListProperty<WorkbenchModule> modulesProperty() {
-    return modules;
-  }
-
-  public WorkbenchModule getActiveModule() {
-    return activeModule.get();
-  }
-
-  public ObjectProperty<WorkbenchModule> activeModuleProperty() {
-    return activeModule;
-  }
-
-  public Node getActiveModuleView() {
-    return activeModuleView.get();
-  }
-
-  public ReadOnlyObjectProperty<Node> activeModuleViewProperty() {
-    return activeModuleView;
-  }
-
-  /**
-   * Returns a list of the currently loaded toolbar controls on the left.
-   *
-   * @implNote Use this method to add or remove toolbar controls on the left at runtime.
-   */
-  public ObservableSet<Node> getToolbarControlsLeft() {
-    return toolbarControlsLeft;
-  }
-
-  /**
-   * Returns a list of the currently loaded toolbar controls on the right.
-   *
-   * @implNote Use this method to add or remove toolbar controls on the right at runtime.
-   */
-  public ObservableSet<Node> getToolbarControlsRight() {
-    return toolbarControlsRight;
-  }
-
-  /**
-   * Hides the currently shown {@link WorkbenchDialog} in the view.
-   */
-  public final void hideDialog() {
-    this.dialog.set(null);
-  }
-
-  /**
-   * Shows a {@link WorkbenchDialog} in the view.
-   *
-   * @param dialog to be shown
-   * @return the {@link DialogControl} which is being shown
-   * @implNote If the user closes a non-blocking dialog by clicking on the {@link GlassPane},
-   *           the result will be {@link ButtonType#CANCEL}.
-   *           All dialogs are non-blocking by default. If you want to change this behavior, use
-   *           {@link WorkbenchDialog#builder} to create a dialog and show it using
-   *           {@link Workbench#showDialog(WorkbenchDialog)}.
-   */
-  public final DialogControl showDialog(WorkbenchDialog dialog) {
-    this.dialog.set(dialog);
-    return getDialogControl();
-  }
-
-  /**
-   * Shows an error dialog in the view.
-   *
-   * @param title   of the dialog
-   * @param message of the dialog
-   * @implNote If the user closes a non-blocking dialog by clicking on the {@link GlassPane},
-   *           the result will be {@link ButtonType#CANCEL}.
-   * @return result a {@link CompletableFuture} which is completed with the {@link ButtonType} that
-   *                was pressed in the dialog
-   */
-  public final CompletableFuture<ButtonType> showErrorDialog(String title, String message) {
-    WorkbenchDialog dialog = WorkbenchDialog.builder(title, message, Type.ERROR).build();
-    showDialog(dialog);
-    return dialog.getResult();
-  }
-
-  /**
-   * Shows an error dialog in the view with a stacktrace of the {@code exception}.
-   *
-   * @param title     of the dialog
-   * @param message   of the dialog
-   * @param exception of which the stacktrace should be shown
-   * @implNote If the user closes a non-blocking dialog by clicking on the {@link GlassPane},
-   *           the result will be {@link ButtonType#CANCEL}.
-   * @return result a {@link CompletableFuture} which is completed with the {@link ButtonType} that
-   *                was pressed in the dialog
-   */
-  public final CompletableFuture<ButtonType> showErrorDialog(
-      String title, String message, Exception exception) {
-    WorkbenchDialog dialog = WorkbenchDialog.builder(title, message, Type.ERROR)
-        .exception(exception)
-        .build();
-    showDialog(dialog);
-    return dialog.getResult();
-  }
-
-  /**
-   * Shows an error dialog in the view with {@code details} about the error.
-   *
-   * @param title   of the dialog
-   * @param message of the dialog
-   * @param details about the error
-   * @implNote If the user closes a non-blocking dialog by clicking on the {@link GlassPane},
-   *           the result will be {@link ButtonType#CANCEL}.
-   * @return result a {@link CompletableFuture} which is completed with the {@link ButtonType} that
-   *                was pressed in the dialog
-   */
-  public final CompletableFuture<ButtonType> showErrorDialog(
-      String title, String message, String details) {
-    WorkbenchDialog dialog = WorkbenchDialog.builder(title, message, Type.ERROR)
-        .details(details)
-        .build();
-    showDialog(dialog);
-    return dialog.getResult();
-  }
-
-  /**
-   * Shows a warning dialog in the view.
-   *
-   * @param title   of the dialog
-   * @param message of the dialog
-   * @implNote If the user closes a non-blocking dialog by clicking on the {@link GlassPane},
-   *           the result will be {@link ButtonType#CANCEL}.
-   * @return result a {@link CompletableFuture} which is completed with the {@link ButtonType} that
-   *                was pressed in the dialog
-   */
-  public final CompletableFuture<ButtonType> showWarningDialog(String title, String message) {
-    WorkbenchDialog dialog = WorkbenchDialog.builder(title, message, Type.WARNING).build();
-    showDialog(dialog);
-    return dialog.getResult();
-  }
-
-  /**
-   * Shows a confirmation dialog in the view.
-   *
-   * @param title   of the dialog
-   * @param message of the dialog
-   * @implNote If the user closes a non-blocking dialog by clicking on the {@link GlassPane},
-   *           the result will be {@link ButtonType#CANCEL}.
-   * @return result a {@link CompletableFuture} which is completed with the {@link ButtonType} that
-   *                was pressed in the dialog
-   */
-  public final CompletableFuture<ButtonType> showConfirmationDialog(String title, String message) {
-    WorkbenchDialog dialog = WorkbenchDialog.builder(title, message, Type.CONFIRMATION).build();
-    showDialog(dialog);
-    return dialog.getResult();
-  }
-
-  /**
-   * Shows an information dialog in the view.
-   *
-   * @param title   of the dialog
-   * @param message of the dialog
-   * @implNote If the user closes a non-blocking dialog by clicking on the {@link GlassPane},
-   *           the result will be {@link ButtonType#CANCEL}.
-   * @return result a {@link CompletableFuture} which is completed with the {@link ButtonType} that
-   *                was pressed in the dialog
-   */
-  public final CompletableFuture<ButtonType> showInformationDialog(String title, String message) {
-    WorkbenchDialog dialog = WorkbenchDialog.builder(title, message, Type.INFORMATION).build();
-    showDialog(dialog);
-    return dialog.getResult();
-  }
-
-  public final ReadOnlyObjectProperty<WorkbenchDialog> dialogProperty() {
-    return dialog;
-  }
-
-  public final ReadOnlyBooleanProperty dialogShownProperty() {
-    return dialogShown.getReadOnlyProperty();
-  }
-
-  public final boolean isDialogShown() {
-    return dialogShown.get();
-  }
-
-  public final WorkbenchDialog getDialog() {
-    return dialog.get();
-  }
-
-  /**
-   * Returns a map of all overlays, which have previously been opened, with their corresponding
-   * {@link GlassPane}.
-   */
-  public ObservableMap<Node, GlassPane> getOverlays() {
-    return FXCollections.unmodifiableObservableMap(overlays);
+  private void resetModuleCloseable(WorkbenchModule module) {
+    LOGGER.trace("moduleCloseable - Cleared future: " + this);
+    CompletableFuture<Boolean> moduleCloseable = new CompletableFuture<>();
+    moduleCloseableMap.put(module, moduleCloseable);
+    LOGGER.trace("moduleCloseable - thenRun set: " + this);
+    moduleCloseable.thenRun(() -> {
+      LOGGER.trace("moduleCloseable -  thenRun triggered: " + this);
+      closeModule(module);
+    });
   }
 
   /**
@@ -590,12 +634,17 @@ public class Workbench extends Control {
    * @param blocking If false (non-blocking), clicking outside of the {@code overlay} will cause it
    *                 to get hidden, together with its {@link GlassPane}. If true (blocking),
    *                 clicking outside of the {@code overlay} will not do anything. The {@code
-   *                 overlay} itself must call {@link Workbench#hideOverlay(Node)} to hide it.
+   *                 overlay} itself must call {@link Workbench#hideOverlay(Region)} to hide it.
+   * @return true if the overlay is not being shown already
    */
-  public boolean showOverlay(Node overlay, boolean blocking) {
+  public final boolean showOverlay(Region overlay, boolean blocking) {
     LOGGER.trace("showOverlay");
     if (!overlays.containsKey(overlay)) {
-      overlays.put(overlay, new GlassPane());
+      overlays.put(overlay, new WorkbenchOverlay(overlay, new GlassPane()));
+    }
+    // To prevent showing the same overlay twice
+    if (blockingOverlaysShown.contains(overlay) || nonBlockingOverlaysShown.contains(overlay)) {
+      return false;
     }
     if (blocking) {
       LOGGER.trace("showOverlay - blocking");
@@ -607,20 +656,116 @@ public class Workbench extends Control {
   }
 
   /**
+   * Shows the {@code overlay} on top of the view, with a {@link GlassPane} in the background.
+   * The overlay will be shown and hidden with an animation, sliding the overlay in and out
+   * from the defined {@code side}.
+   *
+   * @param overlay to be shown
+   * @param blocking If false (non-blocking), clicking outside of the {@code overlay} will cause it
+   *                 to get hidden, together with its {@link GlassPane}. If true (blocking),
+   *                 clicking outside of the {@code overlay} will not do anything. The {@code
+   *                 overlay} itself must call {@link Workbench#hideOverlay(Region)} to hide it.
+   * @param side from which the {@code overlay} should be slid when the overlay is being shown or
+   *             hidden
+   * @return true if the overlay is not being shown already
+   */
+  private boolean showOverlay(Region overlay, boolean blocking, Side side) {
+    LOGGER.trace("showOverlay - animated");
+    if (!overlays.containsKey(overlay)) {
+      overlays.put(overlay,
+          new WorkbenchOverlay(overlay, new GlassPane(), slideIn(overlay), slideOut(overlay))
+      );
+      addInitialAnimationHandler(overlays.get(overlay), side);
+    }
+    return showOverlay(overlay, blocking);
+  }
+
+  /**
+   * Handles the initial animation of an overlay.
+   *
+   * <p>An overlay will have a default size of {@code 0}, when it is <b>first being shown</b> by
+   * {@link WorkbenchPresenter#showOverlay(Region, boolean)}, because it has not been added to the
+   * scene graph or a layout pass has not been performed yet. This means the animation won't be
+   * played by {@link WorkbenchPresenter#showOverlay(Region, boolean)} as well.<br>
+   * For this reason, we wait for the {@link WorkbenchOverlay} to be initialized and then initially
+   * set the coordinates of the overlay to be outside of the {@link Scene}, followed by playing the
+   * initial starting animation.<br>
+   * Any subsequent calls which show this {@code workbenchOverlay} again will <b>not</b> cause this
+   * to trigger again, as the {@link Event} of {@link WorkbenchOverlay#onInitializedProperty()}
+   * will only be fired once, since calling {@link Workbench#hideOverlay(Region)} only makes the
+   * overlays not visible, which means the nodes remain with their size already initialized in the
+   * scene graph.
+   *
+   * @param workbenchOverlay for which to prepare the initial animation handler for
+   * @param side from which the sliding animation should originate
+   */
+  private void addInitialAnimationHandler(WorkbenchOverlay workbenchOverlay, Side side) {
+    Region overlay = workbenchOverlay.getOverlay();
+    // prepare values for setting the listener
+    ReadOnlyDoubleProperty size =
+        side.isVertical() ? overlay.widthProperty() : overlay.heightProperty();
+    //                       LEFT or RIGHT side          TOP or BOTTOM side
+
+    // make sure this code only gets run the first time the overlay has been shown and
+    // rendered in the scene graph, to ensure the overlay has a size for the calculations
+    workbenchOverlay.setOnInitialized(event -> {
+      // prepare variables
+      TranslateTransition start = workbenchOverlay.getAnimationStart();
+      TranslateTransition end = workbenchOverlay.getAnimationEnd();
+      DoubleExpression hiddenCoordinate = DoubleBinding.doubleExpression(size);
+      if (Side.LEFT.equals(side) || Side.TOP.equals(side)) {
+        hiddenCoordinate = hiddenCoordinate.negate(); // make coordinates in hidden state negative
+      }
+
+      if (side.isVertical()) { // LEFT or RIGHT => X
+        overlay.setTranslateX(hiddenCoordinate.get()); // initial position
+        start.setToX(0);
+        if (!end.toXProperty().isBound()) {
+          end.toXProperty().bind(hiddenCoordinate);
+        }
+      }
+      if (side.isHorizontal()) { // TOP or BOTTOM => Y
+        overlay.setTranslateY(hiddenCoordinate.get()); // initial position
+        start.setToY(0);
+        if (!end.toYProperty().isBound()) {
+          end.toYProperty().bind(hiddenCoordinate);
+        }
+      }
+
+      start.play();
+    });
+  }
+
+  private TranslateTransition slideIn(Region overlay) {
+    TranslateTransition open = new TranslateTransition(
+        new Duration(ANIMATION_DURATION_DRAWER_OPEN), overlay);
+    return open;
+  }
+
+  private TranslateTransition slideOut(Region overlay) {
+    TranslateTransition close = new TranslateTransition(
+        new Duration(ANIMATION_DURATION_DRAWER_CLOSE), overlay);
+    close.setOnFinished(event -> {
+      overlay.setVisible(false);
+      LOGGER.trace(
+          "Overlay LayoutX: " + overlay.getLayoutX() + " TranslateX: " + overlay.getTranslateX());
+    });
+    return close;
+  }
+
+  /**
    * Hides the {@code overlay} together with its {@link GlassPane}, which has previously been shown
-   * using {@link Workbench#showOverlay(Node, boolean)}.
+   * using {@link Workbench#showOverlay(Region, boolean)}.
    *
    * @param overlay to be hidden
+   * @return true if the overlay was showing and is now hidden
    * @implNote As the method's name implies, this will only <b>hide</b> the {@code overlay}, not
-   *           remove it from the scene graph entirely.
-   *           If keeping the {@code overlay} loaded hidden in the scene graph is not possible due
-   *           to performance reasons, call {@link Workbench#clearOverlays()} after this method.
+   *           remove it from the scene graph entirely. If keeping the {@code overlay} loaded hidden
+   *           in the scene graph is not possible due to performance reasons, call {@link
+   *           Workbench#clearOverlays()} after this method.
    */
-  public boolean hideOverlay(Node overlay) {
+  public final boolean hideOverlay(Region overlay) {
     LOGGER.trace("hideOverlay");
-    if (getDialogControl() == overlay) {
-      hideDialog();
-    }
     if (blockingOverlaysShown.contains(overlay)) {
       return blockingOverlaysShown.remove(overlay);
     } else {
@@ -632,115 +777,464 @@ public class Workbench extends Control {
    * Removes all previously loaded overlays from the scene graph including all references to them,
    * in order to free up memory.
    */
-  public void clearOverlays() {
+  public final void clearOverlays() {
     LOGGER.trace("clearOverlays");
     nonBlockingOverlaysShown.clear();
     blockingOverlaysShown.clear();
     overlays.clear();
   }
 
-  public void showNavigationDrawer() {
-    showOverlay(navigationDrawer.get(), false);
+  /**
+   * Shows a {@link WorkbenchDialog} in the view.
+   *
+   * @param dialog to be shown
+   * @return  the {@link WorkbenchDialog}, which will be shown
+   * @implNote If the user closes a non-blocking dialog by clicking on the {@link GlassPane},
+   *           the result will be {@link ButtonType#CANCEL}.
+   *           All dialogs are non-blocking by default. If you want to change this behavior, use
+   *           {@link WorkbenchDialog#builder} to create a dialog and show it using
+   *           {@link Workbench#showDialog(WorkbenchDialog)}.
+   */
+  public final WorkbenchDialog showDialog(WorkbenchDialog dialog) {
+    DialogControl dialogControl = dialog.getDialogControl();
+    dialogControl.setWorkbench(this);
+    showOverlay(dialogControl, dialog.isBlocking());
+    return dialog;
   }
 
-  public void hideNavigationDrawer() {
-    hideOverlay(navigationDrawer.get());
+  /**
+   * Shows an error dialog in the view.
+   *
+   * @param title    of the dialog
+   * @param message  of the dialog
+   * @param onResult the action to perform when a button of the dialog was pressed, providing the
+   *                 {@link ButtonType} that was pressed
+   * @return the {@link WorkbenchDialog}, which will be shown
+   * @implNote If the user closes a non-blocking dialog by clicking on the {@link GlassPane}, the
+   *           result will be {@link ButtonType#CANCEL}.
+   */
+  public final WorkbenchDialog showErrorDialog(String title,
+                                               String message,
+                                               Consumer<ButtonType> onResult) {
+    WorkbenchDialog dialog =
+        WorkbenchDialog.builder(title, message, Type.ERROR).onResult(onResult).build();
+    return showDialog(dialog);
   }
 
-  public ObjectProperty<NavigationDrawer> navigationDrawerProperty() {
-    return navigationDrawer;
+  /**
+   * Shows an error dialog in the view with a stacktrace of the {@code exception}.
+   *
+   * @param title     of the dialog
+   * @param message   of the dialog
+   * @param exception of which the stacktrace should be shown
+   * @param onResult  the action to perform when a button of the dialog was pressed, providing the
+   *                  {@link ButtonType} that was pressed
+   * @return the {@link WorkbenchDialog}, which will be shown
+   * @implNote If the user closes a non-blocking dialog by clicking on the {@link GlassPane}, the
+   *           result will be {@link ButtonType#CANCEL}.
+   */
+  public final WorkbenchDialog showErrorDialog(String title,
+                                               String message,
+                                               Exception exception,
+                                               Consumer<ButtonType> onResult) {
+    WorkbenchDialog dialog = WorkbenchDialog.builder(title, message, Type.ERROR)
+        .exception(exception)
+        .onResult(onResult)
+        .build();
+    return showDialog(dialog);
   }
 
-  public NavigationDrawer getNavigationDrawer() {
+  /**
+   * Shows an error dialog in the view with {@code details} about the error.
+   *
+   * @param title    of the dialog
+   * @param message  of the dialog
+   * @param details  about the error
+   * @param onResult the action to perform when a button of the dialog was pressed, providing the
+   *                 {@link ButtonType} that was pressed
+   * @return the {@link WorkbenchDialog}, which will be shown
+   * @implNote If the user closes a non-blocking dialog by clicking on the {@link GlassPane}, the
+   *           result will be {@link ButtonType#CANCEL}.
+   */
+  public final WorkbenchDialog showErrorDialog(String title,
+                                               String message,
+                                               String details,
+                                               Consumer<ButtonType> onResult) {
+    WorkbenchDialog dialog = WorkbenchDialog.builder(title, message, Type.ERROR)
+        .details(details)
+        .onResult(onResult)
+        .build();
+    return showDialog(dialog);
+  }
+
+  /**
+   * Shows a warning dialog in the view.
+   *
+   * @param title    of the dialog
+   * @param message  of the dialog
+   * @param onResult the action to perform when a button of the dialog was pressed, providing the
+   *                 {@link ButtonType} that was pressed
+   * @return the {@link WorkbenchDialog}, which will be shown
+   * @implNote If the user closes a non-blocking dialog by clicking on the {@link GlassPane},
+   *           the result will be {@link ButtonType#CANCEL}.
+   */
+  public final WorkbenchDialog showWarningDialog(String title,
+                                                 String message,
+                                                 Consumer<ButtonType> onResult) {
+    WorkbenchDialog dialog =
+        WorkbenchDialog.builder(title, message, Type.WARNING).onResult(onResult).build();
+    return showDialog(dialog);
+  }
+
+  /**
+   * Shows a confirmation dialog in the view.
+   *
+   * @param title    of the dialog
+   * @param message  of the dialog
+   * @param onResult the action to perform when a button of the dialog was pressed, providing the
+   *                 {@link ButtonType} that was pressed
+   * @return the {@link WorkbenchDialog}, which will be shown
+   * @implNote If the user closes a non-blocking dialog by clicking on the {@link GlassPane},
+   *           the result will be {@link ButtonType#CANCEL}.
+   */
+  public final WorkbenchDialog showConfirmationDialog(String title,
+                                                      String message,
+                                                      Consumer<ButtonType> onResult) {
+    WorkbenchDialog dialog =
+        WorkbenchDialog.builder(title, message, Type.CONFIRMATION).onResult(onResult).build();
+    return showDialog(dialog);
+  }
+
+  /**
+   * Shows an information dialog in the view.
+   *
+   * @param title    of the dialog
+   * @param message  of the dialog
+   * @param onResult the action to perform when a button of the dialog was pressed, providing the
+   *                 {@link ButtonType} that was pressed
+   * @return the {@link WorkbenchDialog}, which will be shown
+   * @implNote If the user closes a non-blocking dialog by clicking on the {@link GlassPane},
+   *           the result will be {@link ButtonType#CANCEL}.
+   */
+  public final WorkbenchDialog showInformationDialog(String title,
+                                                     String message,
+                                                     Consumer<ButtonType> onResult) {
+    WorkbenchDialog dialog =
+        WorkbenchDialog.builder(title, message, Type.INFORMATION).onResult(onResult).build();
+    return showDialog(dialog);
+  }
+
+  /**
+   * Hides the {@code dialog} which was previously shown in the view
+   * using {@link #showDialog(WorkbenchDialog)}.
+   *
+   * @param dialog to be hidden
+   */
+  public final void hideDialog(WorkbenchDialog dialog) {
+    LOGGER.trace("hideDialog");
+    DialogControl dialogControl = dialog.getDialogControl();
+    dialogControl.setWorkbench(null);
+    hideOverlay(dialogControl);
+  }
+
+  /**
+   * Shows the {@code drawer} on the defined {@code side} in the {@link Workbench}.
+   *
+   * @param drawer to be shown
+   * @param side   of the workbench, on which the {@code drawer} should be positioned
+   * @implNote Sizes the drawer according to the computed size of {@code drawer}.
+   *           However, it will take up a maximum of 90% of the screen, to allow the user to still
+   *           close the drawer by clicking on the {@link GlassPane}.
+   */
+  public final void showDrawer(Region drawer, Side side) {
+    showDrawer(drawer, side, -1);
+  }
+
+  /**
+   * Shows the {@code drawer} on the defined {@code side} in the {@link Workbench}, ensuring the
+   * {@code drawer} doesn't cover more than the specified {@code percentage}.
+   *
+   * @param drawer     to be shown
+   * @param side       of the workbench, on which the {@code drawer} should be positioned
+   * @param percentage value between 0 and 100, defining how much <b>maximum</b> coverage the drawer
+   *                   should have or -1, to have the drawer size according to its computed size
+   */
+  public final void showDrawer(Region drawer, Side side, int percentage) {
+    // fail fast
+    if (!Range.closed(0, MAX_PERCENT).or(number -> number == -1).test(percentage)) {
+      throw new IllegalArgumentException("Percentage needs to be between 0 and 100 or -1");
+    }
+    Pos position;
+    drawer.minWidthProperty().unbind();
+    drawer.maxWidthProperty().unbind();
+    drawer.minHeightProperty().unbind();
+    drawer.maxHeightProperty().unbind();
+    switch (side) {
+      case TOP:
+        // fall through to BOTTOM
+      case BOTTOM:
+        position = side == Side.TOP ? Pos.TOP_LEFT : Pos.BOTTOM_LEFT;
+        drawer.minWidthProperty().bind(widthProperty());
+        if (percentage == -1) {
+          bindDrawerHeight(drawer);
+        } else {
+          drawer.maxHeightProperty().bind(
+              heightProperty().multiply((double) percentage / MAX_PERCENT));
+        }
+        break;
+      case RIGHT:
+        // fall through to LEFT
+      default: // LEFT
+        position = side == Side.LEFT ? Pos.TOP_LEFT : Pos.TOP_RIGHT;
+        drawer.minHeightProperty().bind(heightProperty());
+        if (percentage == -1) {
+          bindDrawerWidth(drawer);
+        } else {
+          drawer.maxWidthProperty().bind(
+              widthProperty().multiply((double) percentage / MAX_PERCENT));
+        }
+        break;
+    }
+    StackPane.setAlignment(drawer, position);
+    drawer.getStyleClass().add("drawer");
+    setDrawerSideShown(side);
+    setDrawerShown(drawer);
+  }
+
+  private void bindDrawerWidth(Region drawer) {
+    drawer.setMinWidth(0); // make sure minWidth isn't larger than maxWidth
+    drawer.maxWidthProperty().bind(
+        Bindings.createDoubleBinding(
+            () -> {
+              double computedWidth = drawer.prefWidth(-1);
+              // calculate the width the drawer can take up without being so large that it can't be
+              // hidden anymore by clicking on the GlassPane (GlassPane covers minimum of 10%)
+              double maxDrawerWidth = widthProperty().get() * 0.9;
+              return Math.min(computedWidth, maxDrawerWidth);
+            }, drawer.maxWidthProperty(), widthProperty()
+        )
+    );
+  }
+
+  private void bindDrawerHeight(Region drawer) {
+    drawer.setMinHeight(0); // make sure minHeight isn't larger than maxHeight
+    drawer.maxHeightProperty().bind(
+        Bindings.createDoubleBinding(
+            () -> {
+              double computedHeight = drawer.prefHeight(-1);
+              // calculate the height the drawer can take up without being so large that it can't be
+              // hidden anymore by clicking on the GlassPane (GlassPane covers minimum of 10%)
+              double maxDrawerHeight = heightProperty().get() * 0.9;
+              return Math.min(computedHeight, maxDrawerHeight);
+            }, drawer.maxHeightProperty(), heightProperty()
+        )
+    );
+  }
+
+  /**
+   * Hides the currently displayed drawer that was previously shown using
+   * {@link #showDrawer(Region, Side)} or {@link #showDrawer(Region, Side, int)}.
+   */
+  public final void hideDrawer() {
+    setDrawerShown(null);
+    setDrawerSideShown(null);
+  }
+
+  public final void showNavigationDrawer() {
+    showDrawer(navigationDrawer.get(), Side.LEFT);
+  }
+
+  public final void hideNavigationDrawer() {
+    hideDrawer();
+  }
+
+  // Mutators and Accessors
+  /**
+   * Returns an unmodifiableObservableList of the currently open modules.
+   * @return an unmodifiableObservableList of the currently open modules.
+   */
+  public final ObservableList<WorkbenchModule> getOpenModules() {
+    return FXCollections.unmodifiableObservableList(openModules);
+  }
+
+  private ListProperty<WorkbenchModule> openModulesProperty() {
+    return openModules;
+  }
+
+  /**
+   * Returns a list of the currently loaded modules.
+   *
+   * @return the list of all loaded modules
+   * @implNote Use this method to add or remove modules at runtime.
+   */
+  public final ObservableList<WorkbenchModule> getModules() {
+    return modules.get();
+  }
+
+  private ListProperty<WorkbenchModule> modulesProperty() {
+    return modules;
+  }
+
+  public final WorkbenchModule getActiveModule() {
+    return activeModule.get();
+  }
+
+  public final ReadOnlyObjectProperty<WorkbenchModule> activeModuleProperty() {
+    return activeModule;
+  }
+
+  public final Node getActiveModuleView() {
+    return activeModuleView.get();
+  }
+
+  public final ReadOnlyObjectProperty<Node> activeModuleViewProperty() {
+    return activeModuleView;
+  }
+
+  /**
+   * Returns a {@link CompletableFuture}, which upon completion will cause the module to be closed
+   * and if there was an ongoing stage closing process, it will re-initiate that process.
+   */
+  private CompletableFuture<Boolean> getModuleCloseable(WorkbenchModule module) {
+    return moduleCloseableMap.get(module);
+  }
+
+  /**
+   * Returns a list of the currently loaded toolbar controls on the left.
+   *
+   * @return a list of the currently loaded toolbar controls on the left.
+   * @implNote Use this method to add or remove toolbar controls on the left at runtime.
+   */
+  public final ObservableList<ToolbarItem> getToolbarControlsLeft() {
+    return toolbarControlsLeft;
+  }
+
+  /**
+   * Returns a list of the currently loaded toolbar controls on the right.
+   *
+   * @return a list of the currently loaded toolbar controls on the right.
+   * @implNote Use this method to add or remove toolbar controls on the right at runtime.
+   */
+  public final ObservableList<ToolbarItem> getToolbarControlsRight() {
+    return toolbarControlsRight;
+  }
+
+  /**
+   * Returns a map of all overlays, which have previously been opened, with their corresponding
+   * model object {@link WorkbenchOverlay}.
+   * @return a map of all overlays, which have previously been opened, with their corresponding
+   *         model object {@link WorkbenchOverlay}.
+   */
+  public final ObservableMap<Region, WorkbenchOverlay> getOverlays() {
+    return FXCollections.unmodifiableObservableMap(overlays);
+  }
+
+  public final NavigationDrawer getNavigationDrawer() {
     return navigationDrawer.get();
   }
 
-  public void setNavigationDrawer(NavigationDrawer navigationDrawer) {
+  public final void setNavigationDrawer(NavigationDrawer navigationDrawer) {
     this.navigationDrawer.set(navigationDrawer);
   }
 
-  public ObservableList<MenuItem> getNavigationDrawerItems() {
+  public final ObjectProperty<NavigationDrawer> navigationDrawerProperty() {
+    return navigationDrawer;
+  }
+
+  public final ObservableList<MenuItem> getNavigationDrawerItems() {
     return navigationDrawerItems;
   }
 
-  public DialogControl getDialogControl() {
-    return dialogControl.get();
+  public final ObservableList<Region> getNonBlockingOverlaysShown() {
+    return FXCollections.unmodifiableObservableList(nonBlockingOverlaysShown);
   }
 
-  public void setDialogControl(DialogControl dialogControl) {
-    this.dialogControl.set(dialogControl);
+  public final ObservableList<Region> getBlockingOverlaysShown() {
+    return FXCollections.unmodifiableObservableList(blockingOverlaysShown);
   }
 
-  public ObjectProperty<DialogControl> dialogControlProperty() {
-    return dialogControl;
-  }
-
-  public ObservableSet<Node> getNonBlockingOverlaysShown() {
-    return FXCollections.unmodifiableObservableSet(nonBlockingOverlaysShown);
-  }
-
-  public ObservableSet<Node> getBlockingOverlaysShown() {
-    return FXCollections.unmodifiableObservableSet(blockingOverlaysShown);
-  }
-
-  public int getModulesPerPage() {
+  public final int getModulesPerPage() {
     return modulesPerPage.get();
   }
 
-  public void setModulesPerPage(int modulesPerPage) {
+  public final void setModulesPerPage(int modulesPerPage) {
     this.modulesPerPage.set(modulesPerPage);
   }
 
-  public Callback<Workbench, Tab> getTabFactory() {
-    return tabFactory.get();
-  }
-
-  public void setTabFactory(Callback<Workbench, Tab> tabFactory) {
-    this.tabFactory.set(tabFactory);
-  }
-
-  public ObjectProperty<Callback<Workbench, Tab>> tabFactoryProperty() {
-    return tabFactory;
-  }
-
-  public Callback<Workbench, Tile> getTileFactory() {
-    return tileFactory.get();
-  }
-
-  public void setTileFactory(Callback<Workbench, Tile> tileFactory) {
-    this.tileFactory.set(tileFactory);
-  }
-
-  public ObjectProperty<Callback<Workbench, Tile>> tileFactoryProperty() {
-    return tileFactory;
-  }
-
-  public Callback<Workbench, Page> getPageFactory() {
-    return pageFactory.get();
-  }
-
-  public void setPageFactory(Callback<Workbench, Page> pageFactory) {
-    this.pageFactory.set(pageFactory);
-  }
-
-  public ObjectProperty<Callback<Workbench, Page>> pageFactoryProperty() {
-    return pageFactory;
-  }
-
-  public IntegerProperty modulesPerPageProperty() {
+  public final IntegerProperty modulesPerPageProperty() {
     return modulesPerPage;
   }
 
-  public int getAmountOfPages() {
+  public final Callback<Workbench, Tab> getTabFactory() {
+    return tabFactory.get();
+  }
+
+  public final void setTabFactory(Callback<Workbench, Tab> tabFactory) {
+    this.tabFactory.set(tabFactory);
+  }
+
+  public final ObjectProperty<Callback<Workbench, Tab>> tabFactoryProperty() {
+    return tabFactory;
+  }
+
+  public final Callback<Workbench, Tile> getTileFactory() {
+    return tileFactory.get();
+  }
+
+  public final void setTileFactory(Callback<Workbench, Tile> tileFactory) {
+    this.tileFactory.set(tileFactory);
+  }
+
+  public final ObjectProperty<Callback<Workbench, Tile>> tileFactoryProperty() {
+    return tileFactory;
+  }
+
+  public final Callback<Workbench, Page> getPageFactory() {
+    return pageFactory.get();
+  }
+
+  public final void setPageFactory(Callback<Workbench, Page> pageFactory) {
+    this.pageFactory.set(pageFactory);
+  }
+
+  public final ObjectProperty<Callback<Workbench, Page>> pageFactoryProperty() {
+    return pageFactory;
+  }
+
+  public final int getAmountOfPages() {
     return amountOfPages.get();
   }
 
-  public ReadOnlyIntegerProperty amountOfPagesProperty() {
+  public final ReadOnlyIntegerProperty amountOfPagesProperty() {
     return amountOfPages;
   }
 
+  public final Region getDrawerShown() {
+    return drawerShown.get();
+  }
+
+  private void setDrawerShown(Region drawerShown) {
+    this.drawerShown.set(drawerShown);
+  }
+
+  public final ReadOnlyObjectProperty<Region> drawerShownProperty() {
+    return drawerShown;
+  }
+
+  public final Side getDrawerSideShown() {
+    return drawerSideShown.get();
+  }
+
+  private void setDrawerSideShown(Side drawerSideShown) {
+    this.drawerSideShown.set(drawerSideShown);
+  }
+
+  public final ReadOnlyObjectProperty<Side> drawerSideShownProperty() {
+    return drawerSideShown;
+  }
+
   @Override
-  public String getUserAgentStylesheet() {
+  public final String getUserAgentStylesheet() {
     return Workbench.class.getResource("css/main.css").toExternalForm();
   }
 }
